--- a/azp-agent-in-docker/docker-compose.yml
+++ b/azp-agent-in-docker/docker-compose.yml
@@ -1,17 +1,24 @@
-version: '3'
 services:
-  azp-agent-linux1:
+  azp-agent-linux: &azp-agent
     image: azp-agent:linux
     env_file:
       - .env
+    volumes:
+      - ~/.ssh/docker:/home/agent/.ssh
+      - ~/.ssh/docker/id_rsa:/home/agent/.ssh/id_rsa:ro
+      - ~/.ssh/docker/id_rsa.pub:/home/agent/.ssh/id_rsa.pub:ro
     environment:
-      - AZP_AGENT_NAME=kislow-linux-docker-agent1
-    container_name: azp-agent-linux1
+      - AZP_AGENT_NAME=x-linux-docker-agent-0
+    container_name: azp-agent-linux-0
 
-  azp-agent-linux2:
-    image: azp-agent:linux
-    env_file:
-      - .env
+  azp-agent-linux-1:
+    <<: *azp-agent
     environment:
-      - AZP_AGENT_NAME=kislow-linux-docker-agent2
-    container_name: azp-agent-linux2
+      - AZP_AGENT_NAME=x-linux-docker-agent-1
+    container_name: azp-agent-linux-1
+
+  azp-agent-linux-2:
+    <<: *azp-agent
+    environment:
+      - AZP_AGENT_NAME=x-linux-docker-agent-2
+    container_name: azp-agent-linux-2
