Update example environment variables for Azure Pipelines

--- a/azp-agent-in-docker/env.example
+++ b/azp-agent-in-docker/env.example
@@ -1,3 +1,5 @@
-AZP_URL="https://dev.azure.com/ABC"
-AZP_TOKEN="XXXXXXXXXXXXXXXXXXXXX"
-AZP_POOL="QWERTY"
+AZP_URL=https://dev.azure.com/YOURORG
+AZP_POOL=YOURPOOL
+AZP_TOKEN=YOURPAT
+AZP_AGENT_NAME_PREFIX=x-linux-agent
+AGENT_COUNT=3
